# membrain

./: .agent-mail-project-id  .gitignore  .ralphrc  .ubsignore  AGENTS.md  Cargo.toml  IMPROVED.md  MISSING.md  README.md  install.sh
.beads/: issues.jsonl
.claude/: settings.json
.grove/: grove.db  grove.db-shm  startup_prompt.md
.ralph/: AGENT.md  PROMPT.md  fix_plan.md
.scope/: index.db
.why/: health.jsonl
claude/: ORIGINAL_PLAN_MERGED.md  PLAN_MEGA_UPGRADED.md
codex/: ARCHITECTURE.md  CACHE_AND_PREFETCH.md  CLI.md  CONSOLIDATION.md  (+15 more)
crates/membrain-cli/: Cargo.toml
crates/membrain-cli/src/: lib.rs  main.rs
crates/membrain-cli/tests/: cli_end_to_end.rs  core_api_smoke.rs  e2e_cli.sh
crates/membrain-core/: Cargo.toml
crates/membrain-core/src/: api.rs  benchmarks.rs  brain_store.rs  config.rs  constants.rs  embed.rs  graph.rs  health.rs  index.rs  lib.rs  migrate.rs  observability.rs  persistence.rs  policy.rs  reasoning.rs  types.rs  workflow.rs
crates/membrain-core/src/engine/: belief_history.rs  compression.rs  confidence.rs  consolidation.rs  context_budget.rs  contradiction.rs  diff.rs  dream.rs  encode.rs  episode.rs  forgetting.rs  fork.rs  intent.rs  interference.rs  lease.rs  maintenance.rs  mod.rs  observe.rs  operation.rs  predictive.rs  ranking.rs  recall.rs  reconsolidation.rs  repair.rs  result.rs  retrieval_planner.rs  semantic_retrieval.rs  semantic_retrieval_tests.rs  strength.rs  working_state.rs
crates/membrain-core/src/store/: audit.rs  cache.rs  cold.rs  hot.rs  mod.rs  procedural.rs  tier2.rs  tier_router.rs
crates/membrain-core/tests/: contradiction_lifecycle.rs  encode_fast_path.rs  engram_clusters.rs  lifecycle_deterministic.rs  maintenance_control.rs  recall_pipeline_integration.rs  retrieval_quality_proof.rs  tier1_hot_store.rs  tier1_trace_contract.rs  tier2_item_layout.rs  working_memory_admission.rs
crates/membrain-daemon/: Cargo.toml
crates/membrain-daemon/src/: daemon.rs  lib.rs  main.rs  mcp.rs  preflight.rs  rpc.rs
crates/membrain-daemon/tests/: e2e_mcp.sh  preflight_runtime_parity.rs  runtime_doctor_parity.rs  runtime_share_unshare_parity.rs
(+581 files in other folders)
