[package]
name = "membrain-cli"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "membrain_cli"
path = "src/lib.rs"

[[bin]]
name = "membrain"
path = "src/main.rs"

[dependencies]
membrain-core = { path = "../membrain-core" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
membrain-daemon = { path = "../membrain-daemon" }
