[package]
name = "membrain-core"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "membrain_core"
path = "src/lib.rs"

[dependencies]
fastembed = { version = "5.13.0", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries-rustls-tls"] }
xxhash-rust = { version = "0.8", features = ["xxh64"] }
