[package]
name = "membrain-core"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "membrain_core"
path = "src/lib.rs"

[dependencies]
fastembed = { version = "5.13.0", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries-rustls-tls"] }
xxhash-rust = { version = "0.8", features = ["xxh64"] }
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "6.0"
llama-gguf = { version = "0.14.0", default-features = false, features = ["cpu", "huggingface"] }
