[package]
name = "membrain-daemon"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "membrain_daemon"
path = "src/lib.rs"

[[bin]]
name = "membrain-daemon"
path = "src/main.rs"

[dependencies]
membrain-core = { path = "../membrain-core" }
tokio = { version = "1.40", features = ["full", "sync", "rt", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
